[tool.poetry]
name = "crashfast"
version = "0.1.0"
description = ""
authors = ["Faisallm <faisallawan1997@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.108.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
